fix hover effect on mobile devices.

--- a/src/shared/ui/TrainerWord/ui/TrainerWord.module.scss
+++ b/src/shared/ui/TrainerWord/ui/TrainerWord.module.scss
@@ -35,9 +35,11 @@
     cursor: pointer;
     user-select: none;
 
-    &:hover {
-      color: var(--color-white);
-      background-color: var(--color-black);
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-white);
+        background-color: var(--color-black);
+      }
     }
   }
 }
